# discretiser

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: neural_integration.md  rl_design.md  simulation_framework.md  survival_models.md  synthetic_scenarios.md  trained_model_integration.md
docs/scenarios/: basic_bathtub.md  overview.md  widget_maintenance_full.md
notebooks/: basic_bathtub_analysis.ipynb  basic_bathtub_exploration.ipynb  journey_simulation_examples.ipynb  policy_optimisation.ipynb  rl_dqn.ipynb  rl_quickstart.ipynb  rl_sac.ipynb  rl_training.ipynb
src/: __init__.py  events.py  optimisation.py  runner.py  simulator.py  state.py  survival.py
src/discretiser/: __init__.py  events.py  policy.py  state.py  survival.py
src/discretiser/rl/: __init__.py  callbacks.py  environment.py  evaluation.py  scenarios.py  training.py
src/discretiser/scenarios/: __init__.py  degradation.py
src/rl/: __init__.py  environment.py  evaluation.py  training.py
src/scenarios/: __init__.py  base.py  basic_bathtub.py
tests/: __init__.py  test_basic_bathtub.py
