[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discretiser"
version = "0.1.0"
description = "Competing risks simulation for patient journey data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
rl = [
    "gymnasium",
    "stable-baselines3",
    "torch",
]
dev = [
    "pytest",
    "jupyter",
    "matplotlib",
]
all = [
    "discretiser[rl,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]
